[project]
name = "logseq-helper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wolterlw", email = "wolterlentin@gmail.com" }
]
dependencies = [
    "python-fasthtml>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.rye.scripts]
dev = { cmd = "python src/logseq_helper/webui/main.py", env = {"HELLO"="yo", "WORLD"="world"} }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/logseq_helper"]
